--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "combo": "node index.js",
-    "watermark": "node -e 'require(\"./addWaterMark\").init()'"
+    "watermark": "node -e 'require(\"./addWaterMark\").init('./videos/AVI/temp.mp4, '/avi')'"
   },
   "author": "",
   "license": "ISC",
