--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "test-ffmpeg",
+  "name": "video-conversion-tool",
   "version": "1.0.0",
-  "description": "",
+  "description": "Live Eye Surveillance video conversion tool built exclusively for the organization",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
