--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "convert-and-merge-avi-to-mp4": "node index.js",
-    "watermark": "node ./lib/addWaterMark-sc.js",
+    "watermark": "node -e 'require(\"./lib/addWaterMark-sc\").init()'",
     "mp4": "node -e 'require(\"./lib/mergeMp4Files\").init(\"./videos/MP4\", false)'",
-    "convert-avi-to-mp4": "node ./lib/convertAviToMp4"
+    "convert-avi-to-mp4": "node ./lib/convertAviToMp4.js"
   },
   "author": "Nitish Duggal",
   "license": "ISC",
